updated andorid gcm breaking change

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,7 +96,9 @@ def enableProguardInReleaseBuilds = false
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
-
+    dexOptions {
+        jumboMode true
+    }
     defaultConfig {
         renderscriptTargetApi 26
         renderscriptSupportModeEnabled true
