--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,3 +23,4 @@ MYAPP_RELEASE_STORE_FILE=bytbible.keystore
 MYAPP_RELEASE_KEY_ALIAS=bytbible
 MYAPP_RELEASE_STORE_PASSWORD=bytbible
 MYAPP_RELEASE_KEY_PASSWORD=bytbible
+googlePlayServicesVersion=11.8.0
