--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,5 +24,13 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        configurations.all {
+            resolutionStrategy {
+                // Add force (11.4.0 is version you want to use)
+                force 'com.google.firebase:firebase-messaging:11.8.0'
+                force 'com.google.firebase:firebase-core:11.8.0'
+                force 'com.google.android.gms:play-services-gcm:11.8.0'
+            }
+        }
     }
 }
