--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "react-native-modal-dropdown": "^0.6.0",
     "react-native-modal-wrapper": "^3.1.0",
     "react-native-modalbox": "^1.4.2",
-    "react-native-radio-buttons": "^1.0.0",
     "react-native-popup-dialog": "^0.10.46",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-slider": "^0.11.0",
     "react-native-spinkit": "^1.1.1",
     "react-native-swipeout": "^2.3.3",
@@ -69,9 +69,11 @@
     "react-native-vector-icons": "^4.4.3",
     "react-navigation": "1.4.0",
     "react-navigation-slide-from-right-transition": "^1.0.4",
-    "styled-components": "^3.1.6",
-    "socket.io-client": "^2.1.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "socket.io-client": "^2.1.0",
+    "styled-components": "^3.1.6",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
