--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,7 +156,7 @@ dependencies {
     compile project(':react-native-fs')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-fcm')
-    compile project(':react-native-camera')
+    compile project(":rncamerakit")
     compile project(':react-native-blur')
     compile project(':lottie-react-native')
     compile project(':react-native-code-push')
