--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.banner.takeitover"
+    package="com.banner.takeover"
     android:versionCode="5"
     android:versionName="5.0">
 
