--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-modal-dropdown": "^0.6.0",
     "react-native-modal-wrapper": "^3.1.0",
     "react-native-modalbox": "^1.4.2",
+    "react-native-photo-view": "^1.5.2",
     "react-native-popup-dialog": "^0.10.46",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-slider": "^0.11.0",
