--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "e-an": "react-native run-android",
     "d-an": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
     "r-an": "sh ./doc/buildSignedApk.sh",
-    "code-push-ios-d": "code-push release-react byt.bible.diary.ios ios",
-    "code-push-ios-p": "code-push release-react byt.bible.diary.ios ios -d Production",
-    "code-push-an-d": "code-push release-react byt.bible.diary.an android",
-    "code-push-an-p": "code-push release-react byt.bible.diary.an android -d Production",
-    "code-push-look-ios": "code-push deployment ls byt.bible.diary.ios  -k",
-    "code-push-look-an": "code-push deployment ls byt.bible.diary.an  -k"
+    "code-push-ios-d": "code-push release-react takeOverLoveGodCamp_ios ios --plistFile ios/BYTBibleDiary/Info.plist",
+    "code-push-ios-p": "code-push release-react takeOverLoveGodCamp_ios ios --plistFile ios/BYTBibleDiary/Info.plist -d Production",
+    "code-push-an-d": "code-push release-react takeOverLoveGodCamp_an android",
+    "code-push-an-p": "code-push release-react takeOverLoveGodCamp_an android -d Production",
+    "code-push-look-ios": "code-push deployment ls takeOverLoveGodCamp_ios  -k",
+    "code-push-look-an": "code-push deployment ls takeOverLoveGodCamp_an  -k"
   },
   "dependencies": {
     "cheerio-without-node-native": "^0.20.2",
