--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,3 +24,4 @@ MYAPP_RELEASE_KEY_ALIAS=takeitover
 MYAPP_RELEASE_STORE_PASSWORD=takeitover
 MYAPP_RELEASE_KEY_PASSWORD=takeitover
 googlePlayServicesVersion=11.8.0
+android.enableAapt2=false
