--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'io.fabric'
 
 import com.android.build.OutputFile
 
@@ -105,8 +106,8 @@ android {
         applicationId "com.banner.takeover"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 7
-        versionName "5.2"
+        versionCode 8
+        versionName "5.3"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -165,6 +166,9 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:26.1.0"
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true;
+    }
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
