--- a/ios/BYTBibleDiary/Info.plist
+++ b/ios/BYTBibleDiary/Info.plist
@@ -22,6 +22,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>3</string>
+  <key>ITSAppUsesNonExemptEncryption</key><false/>
 	<key>CodePushDeploymentKey</key>
 	<string>0VWkVSdLJGdM3M506GrSeJBMNbMlc5a64ba8-c46e-44a1-a546-41de22ffbd48</string>
 	<key>Fabric</key>
