--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,14 @@ stages:
   - deploy
   - ios
 
+variables:
+  LC_ALL: "en_US.UTF-8"
+  LANG: "en_US.UTF-8"
+
+before_script:
+  - gem install bundler
+  - bundle install
+
 build-docker-prod:
   stage: build
   image: docker:latest
@@ -89,9 +97,7 @@ ios_deploy_beta:
   dependencies: []
   stage: ios
   allow_failure: false
-  before_script:
-  - gem install bundler
-  - bundle install
+
   script:
     - fastlane beta
   tags:
