--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ stages:
   - deploy
   - ios
 
-
 build-docker-prod:
   stage: build
   image: docker:latest
@@ -92,16 +91,10 @@ ios_deploy_beta:
   stage: ios
   allow_failure: false
   before_script:
-    - apt-get update >/dev/null
-    - apt-get install -y locales >/dev/null
-    - echo "en_US UTF-8" > /etc/locale.gen
-    - locale-gen en_US.UTF-8
-    - export LANG=en_US.UTF-8
-    - export LANGUAGE=en_US:en
-    - export LC_ALL=en_US.UTF-8
     - gem install bundler
     - bundle install
   script:
+    - cd ./ios
     - fastlane beta
   tags:
     - gce
