--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,6 +93,7 @@ ios_deploy_beta:
   before_script:
     - gem install bundler && bundle update 
   script:
+    - echo "$FASTLANE_SESSION"
     - cd ./ios
     - fastlane ios beta
   tags:
