--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,6 +110,7 @@ ios_deploy_prod:
   before_script:
   - gem install bundler && bundle update 
   script:
+    - npm i
     - cd ./ios
     - fastlane ios release
   tags:
