--- a/ios/BYTBibleDiary/Info.plist
+++ b/ios/BYTBibleDiary/Info.plist
@@ -21,8 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>7</string>
-  <key>ITSAppUsesNonExemptEncryption</key><false/>
+	<string>9</string>
 	<key>CodePushDeploymentKey</key>
 	<string>0VWkVSdLJGdM3M506GrSeJBMNbMlc5a64ba8-c46e-44a1-a546-41de22ffbd48</string>
 	<key>Fabric</key>
@@ -39,6 +38,8 @@
 			</dict>
 		</array>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -88,6 +89,7 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
