--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,8 +106,8 @@ android {
         applicationId "com.banner.takeover"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 14
-        versionName "6.0"
+        versionCode 15
+        versionName "7.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -158,7 +158,6 @@ dependencies {
     compile project(':react-native-fs')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-fcm')
-    compile project(":rncamerakit")
     compile project(':react-native-blur')
     compile project(':lottie-react-native')
     compile project(':react-native-code-push')
@@ -170,6 +169,15 @@ dependencies {
         transitive = true;
     }
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile (project(':react-native-camera')) {
+        exclude group: "com.google.android.gms"
+        exclude group: "com.android.support"
+    }
+    configurations.all {
+      resolutionStrategy {
+          force 'com.android.support:support-v4:27.1.0'
+      }
+    }
 }
 
 // Run this once to be able to run the application with BUCK
