--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-app-intro": "git+https://github.com/merryjs/react-native-app-intro.git",
     "react-native-blur": "^3.2.2",
-    "react-native-camera-kit": "^6.2.0",
+    "react-native-camera": "^1.1.4",
     "react-native-circular-action-menu": "^0.4.0",
     "react-native-code-push": "^5.3.2",
     "react-native-drawer": "^2.5.0",
@@ -60,8 +60,10 @@
     "react-native-modal-dropdown": "^0.6.0",
     "react-native-modal-wrapper": "^3.1.0",
     "react-native-modalbox": "^1.4.2",
+    "react-native-permissions": "^1.1.1",
     "react-native-photo-view": "^1.5.2",
     "react-native-popup-dialog": "^0.10.46",
+    "react-native-qrcode-scanner": "^1.0.1",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-slider": "^0.11.0",
     "react-native-spinkit": "^1.1.1",
