--- a/ios/BYTBibleDiary/BYTBibleDiary.entitlements
+++ b/ios/BYTBibleDiary/BYTBibleDiary.entitlements
@@ -3,10 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>aps-environment</key>
-	<string>development</string>
-	<key>keychain-access-groups</key>
-	<array>
-		<string>$(AppIdentifierPrefix)com.banner.takeitover</string>
-	</array>
+	<string>production</string>
 </dict>
 </plist>
