--- a/ios/BYTBibleDiary/Info.plist
+++ b/ios/BYTBibleDiary/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>7.8</string>
+	<string>8.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>14</string>
+	<string>18</string>
 	<key>CodePushDeploymentKey</key>
 	<string>0VWkVSdLJGdM3M506GrSeJBMNbMlc5a64ba8-c46e-44a1-a546-41de22ffbd48</string>
 	<key>Fabric</key>
@@ -65,14 +65,24 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Play using while you are hiking</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Used Bluetooth</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Used Calendars</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Used to scan QRcodes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Used to send you a notification</string>
+	<string>Used Location</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Your message to user when the microphone is accessed for the first time</string>
+	<string>Used Microphone</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Used Motion</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Your message to user when the photo library is accessed for the first time</string>
+	<string>Used Photo</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Used Speech</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
@@ -102,5 +112,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>Used Music</string>
 </dict>
 </plist>
