--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "r-an": "sh ./doc/buildSignedApk.sh",
     "code-push-ios-d": "code-push release-react takeOverLoveGodCamp_ios ios --plistFile ios/BYTBibleDiary/Info.plist",
     "code-push-ios-p": "code-push release-react takeOverLoveGodCamp_ios ios --plistFile ios/BYTBibleDiary/Info.plist -d Production",
-    "code-push-an-d": "code-push release-react takeOverLoveGodCamp_an android",
+    "code-push-an-d": "code-push release-react takeOverLoveGodCamp_an android --noDuplicateReleaseError",
     "code-push-an-p": "code-push release-react takeOverLoveGodCamp_an android -d Production",
     "code-push-look-ios": "code-push deployment ls takeOverLoveGodCamp_ios  -k",
     "code-push-look-an": "code-push deployment ls takeOverLoveGodCamp_an  -k"
